Resolves: tdf#113355 need to explicitly call initial TwoFigureHdl

Change-Id: Ia328f9adf95eef6711d286c9bde5b9a6edbd9978